# task_management_be

./: .gitignore  README.md  Task Management EDR.drawio  main.py  pyproject.toml
app/: crud.py  db.py  init_db.py  main.py  schemas.py  security.py  settings.py  utils.py
app/routers/: main.py
app/routes/: deps.py  main.py  project.py  root.py  task.py  user.py
init/: init.sql
test/: test_func.py
