[project]
name = "taskmanagerbe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "emails>=0.6",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
